# python-partiels

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-common.yml  build-linux.yml  build-macos.yml  build.yml  build_linux.yml  build_macos.yml  build_multi_os.yml  build_windows.yml  full-partiels-build.yml
docs/: Exporter.rst  ImageExporter.rst  Partiels.rst  TextExporter.rst  Version.rst  conf.py  index.rst  modules.rst
docs/_build/doctrees/: Document.doctree  Exporter.doctree  ImageExporter.doctree  Partiels.doctree  SdifExporter.doctree  TextExporter.doctree  Version.doctree  environment.pickle  index.doctree  modules.doctree  templates.doctree  templates.temp.doctree  v2.doctree
docs/_build/html/: .buildinfo  Document.html  Exporter.html  ImageExporter.html  Partiels.html  SdifExporter.html  TextExporter.html  Version.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  templates.html  templates.temp.html  v2.html
docs/_build/html/_modules/: Document.html  Version.html  index.html
src/python_partiels/: Document.py  Exporter.py  Partiels.py  Version.py  config.json  v2.py  xml.py
src/python_partiels.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python_partiels/Exporters/: Exporter.py  ImageExporter.py  LabExporter.py  ReaperExporter.py  SdifExporter.py  TextExporter.py
src/python_partiels/templates/: beat_detection.ptldoc  factory.ptldoc  partials.ptldoc  partiels.ptldoc  spectrogram.ptldoc  supervp.ptldoc
tests/: test_basic.py  test_export.py
(+11 files in other folders)
