[project]
name = "python-partiels"
version = "0.0.0"
authors = [
  { name="Thomas barbé", email="thomas-barbe@hotmail.com" },
]
dependencies = [
  "lxml >= 5.4.0"
]

description = "A Python wrapper for Partiels"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.dev-dependencies]
pytest = "^7.0"